--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <title>Document</title>
   </head>
   <body>
-    <button type="button" id="red-button">Red</button>
-    <button type="button" id="green-button">Green</button>
-    <button type="button" id="blue-button">Blue</button>
+    <div class="m-5">
+      <button type="button" class="btn btn-danger" id="red-button">Red</button>
+      <button type="button" class="btn btn-success" id="green-button">
+        Green
+      </button>
+      <button type="button" class="btn btn-primary" id="blue-button">
+        Blue
+      </button>
+    </div>
   </body>
 </html>
