move script to index.js

--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
   </head>
   <body>
     <div class="m-5">
-      <button type="button" class="btn btn-danger" id="red-button">Red</button>
-      <button type="button" class="btn btn-success" id="green-button">
-        Green
-      </button>
-      <button type="button" class="btn btn-primary" id="blue-button">
-        Blue
-      </button>
+      <button type="button" class="btn btn-danger" id="red">red</button>
+      <button type="button" class="btn btn-success" id="green">green</button>
+      <button type="button" class="btn btn-primary" id="blue">blue</button>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
