--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
       <button type="button" class="btn btn-success" id="green">green</button>
       <button type="button" class="btn btn-primary" id="blue">blue</button>
     </div>
-    <script src="index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
