--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
   </head>
   <body>
     <div class="m-5">
-      <button type="button" class="btn btn-danger" id="red">red</button>
-      <button type="button" class="btn btn-success" id="green">green</button>
-      <button type="button" class="btn btn-primary" id="blue">blue</button>
+      <button type="button" class="btn btn-danger" id="red">Turn red!</button>
+      <button type="button" class="btn btn-success" id="green">
+        Turn green!
+      </button>
+      <button type="button" class="btn btn-primary" id="blue">
+        Turn blue!
+      </button>
     </div>
     <script src="/index.js"></script>
   </body>
